fix cross browser spacing around ActionLink in menu

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -173,10 +173,16 @@
   :global {
     .row {
       padding: 1rem 0;
-      padding-bottom: env(safe-area-inset-bottom);
 
       @media (min-height: 40em) {
         padding: 3rem 0;
+      }
+    }
+
+    .col-xs-12 {
+      padding-bottom: env(safe-area-inset-bottom);
+
+      @media (min-height: 40em) {
         padding-bottom: env(safe-area-inset-bottom);
       }
     }
